alignment fix

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
+    justify-content: center;
     background-image: url('Sky_night_space_background.gif');
     background-size: contain;
 }
@@ -12,7 +13,7 @@ body {
 .games-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: centessr;
+    justify-content: center;
     gap: 20px;
     margin: 20px;
 }
